--- a/index.html
+++ b/index.html
@@ -1,117 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Oluwayemisi Olabanji Okunrounmu - CV</title>
-
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Pacifico&display=swap" rel="stylesheet">
-  <!-- Font Awesome Icons -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-  <!-- External CSS -->
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Oluwayemisi Okunrounmu - CV</title>
+  <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
 
-<!-- Sidebar Navigation -->
-<nav class="sidebar">
-  <ul>
-    <li><a href="#top">Home</a></li>
-    <li><a href="#objective">Objective</a></li>
-    <li><a href="#highlights">Highlights</a></li>
-    <li><a href="#experience">Experience</a></li>
-    <li><a href="#education">Education</a></li>
-    <li><a href="#skills">Skills</a></li>
-    <li><a href="#tools">Tools</a></li>
-    <li><a href="#references">References</a></li>
-  </ul>
-</nav>
+  <!-- Sidebar -->
+  <aside class="sidebar">
+    <h2 class="logo">Yemisi CV</h2>
+    <nav>
+      <ul>
+        <li><a href="#objective">Objective</a></li>
+        <li><a href="#highlights">Highlights</a></li>
+        <li><a href="#experience">Experience</a></li>
+        <li><a href="#education">Education</a></li>
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="#tools">Tools</a></li>
+        <li><a href="#references">References</a></li>
+      </ul>
+    </nav>
+  </aside>
 
-<!-- Main Content -->
-<div class="main-content">
-  <!-- Header -->
-  <header id="top">
-    <h1 class="name">Oluwayemisi Olabanji Okunrounmu</h1>
-    <p>📞 08034737155 | 📧 yemmmyc@hotmail.com</p>
-    <p>🏠 6 Adesina Street, Zansi Estate, Off Iwaya Rd, Onike, Sabo Yaba, Lagos State</p>
-    <div class="social-links">
-      <a href="https://www.linkedin.com/in/yourprofile" target="_blank"><i class="fab fa-linkedin"></i></a>
-      <a href="https://github.com/yourusername" target="_blank"><i class="fab fa-github"></i></a>
-      <a href="https://yourportfolio.com" target="_blank"><i class="fas fa-globe"></i></a>
-    </div>
-  </header>
+  <!-- Main Content -->
+  <main class="content">
+    <header class="header">
+      <h1>Oluwayemisi Okunrounmu</h1>
+      <p class="contact-info">
+        📞 <strong>08034737155</strong> | 📧 <strong>yemmmyc@hotmail.com</strong><br>
+        🏠 <strong>6 Adesina Street, Zansi Estate, Off Iwaya Rd, Onike, Sabo Yaba, Lagos State</strong><br>
+        🔗 <a href="https://www.linkedin.com/in/oluwayemisi-okunrounmu-13936a18" target="_blank">LinkedIn</a> |
+        <a href="https://github.com/Yemmmyc" target="_blank">GitHub</a> |
+        <a href="https://yemmmyc.github.io/my-portfolio/" target="_blank">Portfolio</a>
+      </p>
+    </header>
 
-  <section id="objective">
-    <h2><i class="fas fa-bullseye"></i> Objective</h2>
-    <p>Seasoned IT professional with over 15 years of experience in banking and enterprise IT environments. Proven leader in infrastructure support, cybersecurity, and team development...</p>
-  </section>
+    <section id="objective">
+      <h2>Objective</h2>
+      <p>To leverage my technical expertise and experience in IT support to drive innovation, efficiency, and security in modern IT environments.</p>
+    </section>
 
-  <section id="highlights">
-    <h2><i class="fas fa-lightbulb"></i> Technology Leadership Highlights</h2>
-    <ul>
-      <li>Directed technology operations and infrastructure supporting over 60 branches in the financial sector.</li>
-      <li>Introduced ITIL-based processes, reducing incident response time and increasing team efficiency.</li>
-      <li>Oversaw regional IT project execution, vendor coordination, and internal training programs.</li>
-      <li>Maintained strong compliance posture and cybersecurity readiness through audits and certifications.</li>
-    </ul>
-  </section>
+    <section id="highlights">
+      <h2>Highlights</h2>
+      <ul>
+        <li>Strong technical support background</li>
+        <li>Cloud infrastructure & DevOps enthusiast</li>
+        <li>Skilled in troubleshooting and automation</li>
+      </ul>
+    </section>
 
-  <section id="experience">
-    <h2><i class="fas fa-briefcase"></i> Professional Experience</h2>
-    <p>Details of roles, responsibilities and achievements...</p>
-  </section>
+    <section id="experience">
+      <h2>Experience</h2>
+      <p>[Your professional experience details here]</p>
+    </section>
 
-  <section id="education">
-    <h2><i class="fas fa-graduation-cap"></i> Education & Certifications</h2>
-    <p>List of degrees, professional certifications, and trainings...</p>
-  </section>
+    <section id="education">
+      <h2>Education</h2>
+      <p>[Your education details here]</p>
+    </section>
 
-  <section id="skills">
-    <h2><i class="fas fa-cogs"></i> Core Competencies & Skills</h2>
-    <div class="skills">
-      <span>Technology Strategy</span>
-      <span>Infrastructure Architecture</span>
-      <span>Software & Systems Oversight</span>
-      <span>Team Leadership</span>
-      <span>ITIL Implementation</span>
-      <span>Vendor Management</span>
-      <span>DevOps Tools</span>
-    </div>
-  </section>
+    <section id="skills">
+      <h2>Skills</h2>
+      <ul>
+        <li>Networking & Security</li>
+        <li>Linux Administration</li>
+        <li>Cloud Technologies (AWS, Azure)</li>
+      </ul>
+    </section>
 
-  <section id="tools">
-    <h2><i class="fas fa-tools"></i> Tools & Technologies</h2>
-    <div class="tools">
-      <span>IBM Power Systems</span>
-      <span>Unix/AIX/Linux</span>
-      <span>Windows Servers</span>
-      <span>Jenkins</span>
-      <span>GitHub</span>
-      <span>Kubernetes</span>
-    </div>
-  </section>
+    <section id="tools">
+      <h2>Tools</h2>
+      <ul>
+        <li>Git & GitHub</li>
+        <li>Jenkins, Docker, Kubernetes</li>
+        <li>Terraform, Ansible</li>
+      </ul>
+    </section>
 
-  <section id="references">
-    <h2><i class="fas fa-users"></i> References</h2>
-    <p>Available upon request</p>
-  </section>
+    <section id="references">
+      <h2>References</h2>
+      <p>Available on request</p>
+    </section>
 
-  <footer>
-    &copy; 2025 Oluwayemisi Olabanji Okunrounmu
-  </footer>
-</div>
+    <button id="back-to-top" title="Go to top">↑</button>
+  </main>
 
-<!-- Back to top button -->
-<button id="backToTop"><i class="fas fa-arrow-up"></i></button>
-
-<script>
-  const btn = document.getElementById('backToTop');
-  window.onscroll = () => {
-    btn.style.display = (window.scrollY > 300) ? 'block' : 'none';
-  };
-  btn.onclick = () => window.scrollTo({ top: 0, behavior: 'smooth' });
-</script>
-
+  <script>
+    const topBtn = document.getElementById('back-to-top');
+    window.addEventListener('scroll', () => {
+      if (window.scrollY > 300) {
+        topBtn.style.display = 'block';
+      } else {
+        topBtn.style.display = 'none';
+      }
+    });
+    topBtn.addEventListener('click', () => {
+      window.scrollTo({ top: 0, behavior: 'smooth' });
+    });
+  </script>
 </body>
 </html>
